Attachments added in message and draft post
